// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
.c7 {
  width: 1.25rem;
  height: 1.25rem;
}

.c4 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: white;
  fill: white;
}

.c4:focus-within,
.c4:focus {
  position: relative;
  outline: none !important;
}

.c4:focus-within::after,
.c4:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c4:hover {
  color: white;
  fill: white;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c8 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c5 {
  margin: 0;
}

.c2 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c2:first-of-type {
  margin-top: 0.86rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  border-top: solid #1e1e1e 0.15rem;
  background-color: #1e1e1e;
  background-position: center;
  background-size: cover;
  color: white;
}

.c1 {
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c4:focus-within::after,
  .c4:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
    fill: white;
  }

  .c4:hover {
    color: white;
    fill: white;
  }
}

@media (min-width:32.25rem) {
  .c0 {
    padding: 2rem 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    border-top: solid #44aeff 0.15rem;
  }
}

<div>
  <footer
    class="c0"
    id="footer"
  >
    <div
      class="c1"
    >
      <span
        class="c2 c3"
      >
        Made with love by
         
        <a
          aria-label="George (opens in a new tab)"
          class="c4"
          href="https://www.georgegillams.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5"
          >
            George
          </span>
          <div
            class="c6"
          >
            <svg
              class="c7 c8"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
      </span>
      <span
        class="c2 c3"
      >
        Please do not share with anyone under the legal purchase age for alcohol. Drink Responsibly.
      </span>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
.c7 {
  width: 1.25rem;
  height: 1.25rem;
}

.c4 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: white;
  fill: white;
}

.c4:focus-within,
.c4:focus {
  position: relative;
  outline: none !important;
}

.c4:focus-within::after,
.c4:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c4:hover {
  color: white;
  fill: white;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c8 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c5 {
  margin: 0;
}

.c2 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c2:first-of-type {
  margin-top: 0.86rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  border-top: solid #1e1e1e 0.15rem;
  background-color: #1e1e1e;
  background-position: center;
  background-size: cover;
  color: white;
}

.c1 {
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c4:focus-within::after,
  .c4:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
    fill: white;
  }

  .c4:hover {
    color: white;
    fill: white;
  }
}

@media (min-width:32.25rem) {
  .c0 {
    padding: 2rem 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    border-top: solid #44aeff 0.15rem;
  }
}

<div>
  <footer
    class="c0 test-custom-className"
    id="footer"
  >
    <div
      class="c1"
    >
      <span
        class="c2 c3"
      >
        Made with love by
         
        <a
          aria-label="George (opens in a new tab)"
          class="c4"
          href="https://www.georgegillams.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5"
          >
            George
          </span>
          <div
            class="c6"
          >
            <svg
              class="c7 c8"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
      </span>
      <span
        class="c2 c3"
      >
        Please do not share with anyone under the legal purchase age for alcohol. Drink Responsibly.
      </span>
    </div>
  </footer>
</div>
`;
